fixed highlighting issue on mobile device

--- a/style.css
+++ b/style.css
@@ -20,7 +20,9 @@
 }
 
 input[type=radio] {
-  appearance: none;
+  position: fixed;
+  opacity: 0;
+  pointer-events: none;
 }
 
 .radio-btn label {
@@ -133,6 +135,7 @@ body {
 .radio-btn {
   color: var(--light-grey);
   background-color: hsl(216, 12%, 22%);
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 
 .radio-btn:not(.hover-off):hover {
